--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', serif;;
+    font-family: 'Roboto', serif;
 }
 
 .container{
